# sensor-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
include/: App.h  MainFrame.h  Node.h  PathUtils.h  PlotFrame.h  PlotManager.h  SensorData.h  SensorDataEvent.h  SensorDataGenerator.h  SensorDataJsonReader.h  SensorDataJsonWriter.h  SensorDataTestGenerator.h  SensorTreeModel.h
src/: App.cpp  MainFrame.cpp  Node.cpp  PlotFrame.cpp  PlotManager.cpp  SensorData.cpp  SensorDataEvent.cpp  SensorDataGenerator.cpp  SensorDataJsonReader.cpp  SensorDataJsonWriter.cpp  SensorDataTestGenerator.cpp  SensorTreeModel.cpp
tests/: MaintenanceTests.cpp
